--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,4 @@
 include README.rst
 include doc/*
 include LICENSE
-include examples/*
-include tests/*
-include default_config.toml
+recursive-include xanadu_sphinx_theme *
