added sphinx gallery support

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -28,3 +28,17 @@ projectlink =
 large_toc =
 # latex macros
 latex_macros =
+
+# the following are custom CSS colors than can be set
+navigation_button = #1f9094
+navigation_button_hover = #1c6e71
+toc_caption = #1f9094
+toc_hover = #1f9094
+table_header_bg = #e2f5f6
+table_header_border = #1f9094
+logo_hover_bg = #efefef
+download_button = #1f9094
+
+# sphinx gallery options
+gallery_dirs =
+github_repo =
