--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -3,42 +3,26 @@ inherit = basic
 stylesheet = xanadu.css
 
 [options]
-# Set to an html template to load custom HTML for the homepage
-index_template =
-# Set the name of the project to appear in the left sidebar.
-project_nav_name =
-# set the path to a logo to appear in the left sidebar.
-project_logo =
-# Path to a touch icon
-touch_icon =
-# Path to a smaller touch icon
-touch_icon_small =
-# Set this value to enable Disqus comments
-disqus_comments_shortname =
-# Set to enable google analytics
-google_analytics_account =
-# Specify a base_url used to generate sitemap.xml links. If not specified, then
-# no sitemap will be built.
-base_url =
-# Allow a separate homepage from the "master_doc"
-homepage =
-# Allow the project link to be overwritten to a custom URL.
-projectlink =
-# if the table of contents is large
-large_toc =
-# latex macros
-latex_macros =
+# Name of the project to appear in the navigation bar.
+navbar_name =
+# Path to the project logo to appear in the navigation bar.
+navbar_logo_path = _static/x.svg
+# Colour of the auto-generated Xanadu (X) logo (available at ``_static/x.svg``).
+navbar_logo_colour =
 
-# the following are custom CSS colors than can be set
-navigation_button = #1f9094
-navigation_button_hover = #1c6e71
-toc_caption = #1f9094
-toc_hover = #1f9094
-table_header_bg = #e2f5f6
-table_header_border = #1f9094
-logo_hover_bg = #efefef
-download_button = #1f9094
+# Border colour of accent rules and table headers.
+border_colour =
+# Background and hover colours of the PREVIOUS and NEXT navigation buttons.
+prev_next_button_colour =
+prev_next_button_hover_colour =
+# Colour of the marker beside the current ToC entry.
+toc_marker_colour =
+# Background colour of table headers.
+table_header_background_colour =
+# Accent colour for text such as download links.
+text_accent_colour =
 
-# sphinx gallery options
-gallery_dirs =
-github_repo =
+# Google Analytics tracking ID for the website.
+google_analytics_tracking_id =
+# URL to the project GitHub repository, including the scheme (e.g., https://).
+github_repository_url =
