--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -8,21 +8,21 @@ navbar_name =
 # Path to the project logo to appear in the navigation bar.
 navbar_logo_path = _static/x.svg
 # Colour of the auto-generated Xanadu (X) logo (available at ``_static/x.svg``).
-navbar_logo_colour =
+navbar_logo_colour = #000000
 
 # Border colour of accent rules and table headers.
 border_colour =
 # Background and hover colours of the PREVIOUS and NEXT navigation buttons.
 prev_next_button_colour =
 prev_next_button_hover_colour =
-# Colour of the marker beside the current ToC entry.
-toc_marker_colour =
 # Background colour of table headers.
 table_header_background_colour =
 # Accent colour for text such as download links.
 text_accent_colour =
+# Colour of the marker beside the current ToC entry.
+toc_marker_colour =
 
 # Google Analytics tracking ID for the website.
 google_analytics_tracking_id =
-# URL to the project GitHub repository, including the scheme (e.g., https://).
+# URL to the project GitHub repository (e.g., https://github.com/XanaduAI/Foo).
 github_repository_url =
