Add support for navbar link customization

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -9,6 +9,12 @@ navbar_name =
 navbar_logo_path = _static/x.svg
 # Colour of the auto-generated Xanadu (X) logo (available at ``_static/x.svg``).
 navbar_logo_colour = #000000
+# Links on the LHS of the navigation bar in the form of a list of dictionaries
+# with the "name", "href", and optionally, "active" keys.
+navbar_left_links =
+# Links on the LHS and RHS of the navigation bar. The value of each option is
+# is expected to be a list of dictionaries with "name" and "href" keys.
+navbar_right_links =
 
 # Border colour of accent rules and table headers.
 border_colour =
