Add support for additional copyright notices, such as for TensorFlow

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -30,5 +30,6 @@ toc_marker_colour =
 
 # Google Analytics tracking ID for the website.
 google_analytics_tracking_id =
-# URL to the project GitHub repository (e.g., https://github.com/XanaduAI/Foo).
-github_repository_url =
+
+# List of extra copyright notices to place in the footer.
+extra_copyrights =
