--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -6,8 +6,8 @@ stylesheet = xanadu.css
 # Name of the project to appear in the navigation bar.
 navbar_name =
 # Path to the project logo to appear in the navigation bar.
-navbar_logo_path = _static/x.svg
-# Colour of the auto-generated Xanadu (X) logo (available at ``_static/x.svg``).
+navbar_logo_path = _static/xanadu_logo.svg
+# Colour of the auto-generated Xanadu (X) logo (available at ``_static/xanadu_logo.svg``).
 navbar_logo_colour = #000000
 # Links on the LHS of the navigation bar in the form of a list of dictionaries
 # with the "name", "href", and optionally, "active" keys.
