Add CSS support for FlamingPy 'Install' page

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -18,6 +18,8 @@ navbar_right_links =
 
 # Border colour of accent rules and table headers.
 border_colour =
+# Colour of code blocks and teletype text.
+code_colour = #8D1A38
 # Background and hover colours of the PREVIOUS and NEXT navigation buttons.
 prev_next_button_colour =
 prev_next_button_hover_colour =
