Add option to customize navbar name/logo link

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -9,11 +9,13 @@ navbar_name =
 navbar_logo_path = _static/xanadu_logo.svg
 # Colour of the auto-generated Xanadu (X) logo (available at ``_static/xanadu_logo.svg``).
 navbar_logo_colour = #000000
+# Link that is opened when the name or logo on the navigation bar is clicked.
+navbar_home_link = index.html
 # Links on the LHS of the navigation bar in the form of a list of dictionaries
 # with the "name", "href", and optionally, "active" keys.
 navbar_left_links =
-# Links on the LHS and RHS of the navigation bar. The value of each option is
-# is expected to be a list of dictionaries with "name" and "href" keys.
+# Links on the RHS of the navigation bar in the form of a list of dictionaries
+# with the "name" and "href" keys.
 navbar_right_links =
 
 # Border colour of accent rules and table headers.
