Add support for wordmarks in the navigation bar

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -5,6 +5,10 @@ stylesheet = xanadu.css
 [options]
 # Name of the project to appear in the navigation bar.
 navbar_name =
+# Path to the project wordmark to appear in the navigation bar. Specifying this
+# option will replace the project name in the navigation bar. Eventually, this
+# option will be removed in favour of navbar_name for the sake of consistency.
+navbar_wordmark_path =
 # Path to the project logo to appear in the navigation bar.
 navbar_logo_path = _static/xanadu_logo.svg
 # Colour of the auto-generated Xanadu (X) logo (available at ``_static/xanadu_logo.svg``).
