--- a/.github/workflows/pre_release_version_bump.yml
+++ b/.github/workflows/pre_release_version_bump.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          base: main
+          base: master
           title: Pre-release version bump to `${{ steps.versions.outputs.new_version }}`
           body: >
             This PR bumps the XST version from `${{ steps.versions.outputs.old_version }}`
