--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -35,6 +35,8 @@ table_header_background_colour =
 text_accent_colour =
 # Colour of the marker beside the current ToC entry.
 toc_marker_colour =
+# Whether to include link to index.rst in the ToC
+toc_overview =
 
 # Google Analytics tracking ID for the website.
 google_analytics_tracking_id =
