--- a/.pylintrc
+++ b/.pylintrc
@@ -4,7 +4,7 @@
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=duplicate-code
+disable=duplicate-code,line-too-long
 
 [STRING]
 
