--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -37,6 +37,10 @@ text_accent_colour =
 toc_marker_colour =
 # Whether to include link to index.rst in the ToC
 toc_overview =
+# No global TOC
+toc_global = True
+# Whether to show the next and previous buttons
+relations = True
 
 # Google Analytics tracking ID for the website.
 google_analytics_tracking_id =
