--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -39,6 +39,8 @@ toc_marker_colour =
 toc_overview =
 # No global TOC
 toc_global = True
+# Whether to display ToC for a subset of the current document tree
+toc_subset = True
 # Whether to show the next and previous buttons
 relations = True
 
