added better support

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -41,6 +41,8 @@ toc_overview =
 toc_global = True
 # Whether to display ToC for a subset of the current document tree
 toc_subset = True
+# Whether to display the ToC on hover over the active navbar link
+toc_hover = True
 # Whether to show the next and previous buttons
 relations = True
 
