Add options to configure the footer

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -51,3 +51,9 @@ google_analytics_tracking_id =
 
 # List of extra copyright notices to place in the footer.
 extra_copyrights =
+
+footer_about =
+footer_links =
+footer_socials =
+footer_tagline =
+
