Apply suggestions from code review
Co-authored-by: Mikhail Andrenkov <Mandrenkov@users.noreply.github.com>

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -37,7 +37,7 @@ text_accent_colour =
 toc_marker_colour =
 # Whether to include link to index.rst in the ToC
 toc_overview =
-# No global TOC
+# Whether to display the global ToC
 toc_global = True
 # Whether to display ToC for a subset of the current document tree
 toc_subset = True
