Add support for the QML repo (#14)
* Add documentation

* isort

* adding documentation

* adding documentation

* black

* add release notes

* add g

* linting

* fix render

* changelog

* Add support for the QML repo

* Add support for the QML repo

* update

* black

* black

* fix

* fix

* black

* black

* fix

* fix mobile

* fix

* merge master

* fixes

* fixes

* more

* more

* added better support

* center author bio

* Update Sphinx documentation theme colour

* Apply suggestions from code review

Co-authored-by: Mikhail Andrenkov <Mandrenkov@users.noreply.github.com>

* Update requirements.txt

* fix

* turn on LHS TOC

Co-authored-by: Mikhail Andrenkov <M.Andrenkov@gmail.com>
Co-authored-by: Mikhail Andrenkov <Mandrenkov@users.noreply.github.com>

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -37,6 +37,14 @@ text_accent_colour =
 toc_marker_colour =
 # Whether to include link to index.rst in the ToC
 toc_overview =
+# Whether to display the global ToC
+toc_global = True
+# Whether to display ToC for a subset of the current document tree
+toc_subset = True
+# Whether to display the ToC on hover over the active navbar link
+toc_hover = True
+# Whether to show the next and previous buttons
+relations = True
 
 # Google Analytics tracking ID for the website.
 google_analytics_tracking_id =
