Add options to configure the footer (#16)
* Add documentation

* isort

* adding documentation

* adding documentation

* black

* add release notes

* add g

* linting

* fix render

* changelog

* Add support for the QML repo

* Add support for the QML repo

* update

* black

* black

* fix

* fix

* black

* black

* fix

* fix mobile

* fix

* merge master

* fixes

* fixes

* more

* more

* Update heading and navbar font to Quicksand

* changelog

* added better support

* center author bio

* Add options to configure the footer

* black

* Apply suggestions from code review

Co-authored-by: anthayes92 <34694788+anthayes92@users.noreply.github.com>

* add SF

* Apply suggestions from code review

Co-authored-by: Mikhail Andrenkov <Mandrenkov@users.noreply.github.com>

* Update theme.conf

* remove deep purple

Co-authored-by: anthayes92 <34694788+anthayes92@users.noreply.github.com>
Co-authored-by: Mikhail Andrenkov <Mandrenkov@users.noreply.github.com>

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -51,3 +51,13 @@ google_analytics_tracking_id =
 
 # List of extra copyright notices to place in the footer.
 extra_copyrights =
+
+# Specify the title and description of the About section in the footer
+footer_about =
+# Provide lists of links to display in the footer
+footer_links =
+# Provide social media links/icons to be displayed in the footer
+footer_socials =
+# A tagline to be displayed under the social media links
+footer_tagline =
+
