Fix a bug where sidebars were not properly configured

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -1,6 +1,7 @@
 [theme]
 inherit = basic
 stylesheet = xanadu.css
+sidebars = globaltoc.html, searchbox.html
 
 [options]
 # Name of the project to appear in the navigation bar.
