added missing variables

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -53,6 +53,11 @@ google_analytics_tracking_id =
 # List of extra copyright notices to place in the footer.
 extra_copyrights =
 
+# Link that is opened when View on GitHub is clicked on a demo
+github_link =
+# Path where to save gallery generated examples
+gallery_dirs =
+
 # Specify the title and description of the About section in the footer
 footer_about =
 # Provide lists of links to display in the footer
