--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -53,7 +53,8 @@ google_analytics_tracking_id =
 # List of extra copyright notices to place in the footer.
 extra_copyrights =
 
-# Link that is opened when View on GitHub is clicked on a demo
+# GitHub organization and repository name of associated GitHub repo.
+# Used to ensure that 'View on GitHub' buttons work.
 github_link =
 # Path where to save gallery generated examples
 gallery_dirs =
