--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -55,7 +55,7 @@ extra_copyrights =
 
 # GitHub organization and repository name of associated GitHub repo.
 # Used to ensure that 'View on GitHub' buttons work.
-github_link =
+github_repo =
 # Path where to save gallery generated examples
 gallery_dirs =
 
