--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -53,6 +53,12 @@ google_analytics_tracking_id =
 # List of extra copyright notices to place in the footer.
 extra_copyrights =
 
+# GitHub organization and repository name of associated GitHub repo.
+# Used to ensure that 'View on GitHub' buttons work.
+github_repo =
+# Path where to save gallery generated examples
+gallery_dirs =
+
 # Specify the title and description of the About section in the footer
 footer_about =
 # Provide lists of links to display in the footer
