--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -59,12 +59,13 @@ github_repo =
 # Path where to save gallery generated examples
 gallery_dirs =
 
-# Specify the title and description of the About section in the footer
+# Title, icon, and description of the About section in the footer
 footer_about =
-# Provide lists of links to display in the footer
+# Policies to display in the footer
+footer_policies =
+# Column links to display in the footer
 footer_links =
-# Provide social media links/icons to be displayed in the footer
+# Social media links and icons to be displayed in the footer
 footer_socials =
-# A tagline to be displayed under the social media links
-footer_tagline =
-
+# Taglines to be displayed under the social media links in the footer
+footer_taglines =
