Add theme variables for footer icon and social icon colour

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -30,6 +30,8 @@ code_colour = #8D1A38
 # Background and hover colours of the PREVIOUS and NEXT navigation buttons.
 prev_next_button_colour =
 prev_next_button_hover_colour =
+# Colour of the social icons
+social_icon_colour =
 # Background colour of table headers.
 table_header_background_colour =
 # Accent colour for text such as download links.
@@ -59,7 +61,7 @@ github_repo =
 # Path where to save gallery generated examples
 gallery_dirs =
 
-# Title, icon, and description of the About section in the footer
+# Title, icon, link, and description of the About section in the footer
 footer_about =
 # Policies to display in the footer
 footer_policies =
