Remove deprecated `toc_hover` theme option

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -48,8 +48,6 @@ toc_mobile_heading_colour =
 toc_global = True
 # Whether to display ToC for a subset of the current document tree
 toc_subset = True
-# Whether to display the ToC on hover over the active navbar link
-toc_hover = True
 # Whether to show the next and previous buttons
 relations = True
 
@@ -72,6 +70,6 @@ footer_policies =
 # Column links to display in the footer
 footer_links =
 # Social media links and icons to be displayed in the footer
-footer_social_links =
+footer_social_icons =
 # Taglines to be displayed under the social media links in the footer
 footer_taglines =
