--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -1,14 +1,14 @@
 [theme]
 inherit = basic
 stylesheet = xanadu.css
-sidebars = globaltoc.html, searchbox.html
+sidebars = searchbox.html, globaltoc.html
 
 [options]
 # Name of the project to appear in the navigation bar.
 navbar_name =
-# Path to the project wordmark to appear in the navigation bar. Specifying this
-# option will replace the project name in the navigation bar. Eventually, this
-# option will be removed in favour of navbar_name for the sake of consistency.
+# Path to an image with the project name and wordmark to appear in the
+# navigation bar. Specifying this option will replace the project name and logo
+# in the navigation bar.
 navbar_wordmark_path =
 # Path to the project logo to appear in the navigation bar.
 navbar_logo_path = _static/xanadu_logo.svg
@@ -17,10 +17,10 @@ navbar_logo_colour = #000000
 # Link that is opened when the name or logo on the navigation bar is clicked.
 navbar_home_link = index.html
 # Links on the LHS of the navigation bar in the form of a list of dictionaries
-# with the "name", "href", and optionally, "active" keys.
+# with the "name", "href", and optionally, "external" and "dropdown" keys.
 navbar_left_links =
 # Links on the RHS of the navigation bar in the form of a list of dictionaries
-# with the "name" and "href" keys.
+# with the "name", "href", and "icon" keys.
 navbar_right_links =
 
 # Border colour of accent rules and table headers.
@@ -30,6 +30,8 @@ code_colour = #8D1A38
 # Background and hover colours of the PREVIOUS and NEXT navigation buttons.
 prev_next_button_colour =
 prev_next_button_hover_colour =
+# Colour of the social icons
+social_icon_colour =
 # Background colour of table headers.
 table_header_background_colour =
 # Accent colour for text such as download links.
@@ -38,12 +40,14 @@ text_accent_colour =
 toc_marker_colour =
 # Whether to include link to index.rst in the ToC
 toc_overview =
+# Background colour of the mobile ToC heading.
+toc_mobile_heading_background_colour =
+# Text colour of the mobile ToC heading.
+toc_mobile_heading_colour =
 # Whether to display the global ToC
 toc_global = True
 # Whether to display ToC for a subset of the current document tree
 toc_subset = True
-# Whether to display the ToC on hover over the active navbar link
-toc_hover = True
 # Whether to show the next and previous buttons
 relations = True
 
@@ -59,12 +63,13 @@ github_repo =
 # Path where to save gallery generated examples
 gallery_dirs =
 
-# Specify the title and description of the About section in the footer
+# Title, icon, link, and description of the About section in the footer
 footer_about =
-# Provide lists of links to display in the footer
+# Policies to display in the footer
+footer_policies =
+# Column links to display in the footer
 footer_links =
-# Provide social media links/icons to be displayed in the footer
-footer_socials =
-# A tagline to be displayed under the social media links
-footer_tagline =
-
+# Social media links and icons to be displayed in the footer
+footer_social_icons =
+# Taglines to be displayed under the social media links in the footer
+footer_taglines =
