--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -6,10 +6,11 @@ sidebars = searchbox.html, globaltoc.html
 [options]
 # Name of the project to appear in the navigation bar.
 navbar_name =
-# Path to an image with the project name and wordmark to appear in the
-# navigation bar. Specifying this option will replace the project name and logo
-# in the navigation bar.
+# Path to an image with the project name and wordmark to appear in the navigation bar.
+# Specifying this option will replace the project name and logo in the navigation bar.
 navbar_wordmark_path =
+# Alternative text to display in lieu of the wordmark or logo in the navigation bar.
+navbar_logo_alt =
 # Path to the project logo to appear in the navigation bar.
 navbar_logo_path = _static/xanadu_logo.svg
 # Colour of the auto-generated Xanadu (X) logo (available at ``_static/xanadu_logo.svg``).
