Add ARIA labels to social icons in footer

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -70,7 +70,7 @@ footer_about =
 footer_policies =
 # Column links to display in the footer
 footer_links =
-# Social media links and icons to be displayed in the footer
+# Social media names, links, and icons to be displayed in the footer
 footer_social_icons =
 # Taglines to be displayed under the social media links in the footer
 footer_taglines =
