Improve accessibility of navbar and footer (#44)
* Add `alt` text to navbar logo and wordmark

* Add ARIA labels to links on the RHS of the navigation bar

* Add ARIA labels to social icons in footer

* Add ARIA labels to mobile navbar menu

* Add ARIA labels to navbar buttons

* Support using ESC or ENTER to collapse or expand menus

* Trap focus in mobile navbar when expanded

* Add release notes to changelog

* Bump version to v0.5.0

* Add missing `event` parameters to dropdown action functions

* Add debug `console.log()` messages

* Do not use unsupported `.aria*` attributes

* Toggle navbar dropdowns on `CTRL OPTION SPACE`

* Add `aria-hidden` attributes to covered content

* Remove extra `keyup` listener

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -6,10 +6,11 @@ sidebars = searchbox.html, globaltoc.html
 [options]
 # Name of the project to appear in the navigation bar.
 navbar_name =
-# Path to an image with the project name and wordmark to appear in the
-# navigation bar. Specifying this option will replace the project name and logo
-# in the navigation bar.
+# Path to an image with the project name and wordmark to appear in the navigation bar.
+# Specifying this option will replace the project name and logo in the navigation bar.
 navbar_wordmark_path =
+# Alternative text to display in lieu of the wordmark or logo in the navigation bar.
+navbar_logo_alt =
 # Path to the project logo to appear in the navigation bar.
 navbar_logo_path = _static/xanadu_logo.svg
 # Colour of the auto-generated Xanadu (X) logo (available at ``_static/xanadu_logo.svg``).
@@ -69,7 +70,7 @@ footer_about =
 footer_policies =
 # Column links to display in the footer
 footer_links =
-# Social media links and icons to be displayed in the footer
+# Social media names, links, and icons to be displayed in the footer
 footer_social_icons =
 # Taglines to be displayed under the social media links in the footer
 footer_taglines =
