Add `search_on_pennylane_ai` theme option

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -58,6 +58,9 @@ google_analytics_tracking_id =
 # List of extra copyright notices to place in the footer.
 extra_copyrights =
 
+# Whether to redirect searches to https://pennylane.ai/search.
+search_on_pennylane_ai = False
+
 # GitHub organization and repository name of associated GitHub repo.
 # Used to ensure that 'View on GitHub' buttons work.
 github_repo =
