--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,10 +1,11 @@
-m2r2
-matplotlib==3.5.3
-numpy==1.26.4
-pillow==10.3.0
-sphinx==4.5.0
+docutils==0.16  # Implicitly required by m2r2 v0.3.2
+matplotlib==3.9.2
+m2r2==0.3.2
+pillow==11.0.0
+sphinx==5.3.0
 sphinx-copybutton==0.5.2
-sphinx-gallery==0.10.1
+sphinx-gallery==0.18.0
+numpy==1.26.4
 sphinxcontrib-applehelp==1.0.4
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-qthelp==1.0.3
