configure theme config for command-palette

--- a/xanadu_sphinx_theme/theme.conf
+++ b/xanadu_sphinx_theme/theme.conf
@@ -61,6 +61,9 @@ extra_copyrights =
 # Whether to redirect searches to https://pennylane.ai/search.
 search_on_pennylane_ai = False
 
+# Whether to enable the pennylane command palette. 
+command_palette_enabled = False
+
 # GitHub organization and repository name of associated GitHub repo.
 # Used to ensure that 'View on GitHub' buttons work.
 github_repo =
