--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# Misc
+.DS_Store
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
